fixed spacing issue on welcome page and header and styled the footer for mobile

--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -36,4 +36,19 @@ footer p {
 footer a img {
     top: 5px;
     left: 5px;
+    height: 25px;
+    width: 25px;
+}
+
+@media only screen and (max-width: 600px) {
+    footer p {
+        font-size: 10px;
+        padding: 0;
+        margin: 0;
+    }
+
+    footer a img {
+        width: 15px;
+        height: 15px;
+    }
 }
