--- a/client/src/pages/Welcome/Welcome.css
+++ b/client/src/pages/Welcome/Welcome.css
@@ -269,13 +269,20 @@
   width: 60px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 320px) {
+  .WP-welcome {
+    height: 250px;
+    width: 250px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
   .welcome-page {
     height: 100%;
+    padding-top: 0;
   }
 
   .WP-welcome {
-    top: 50px;
     width: 250px;
     height: 250px;
   }
@@ -334,7 +341,7 @@
   
   .discription {
     position: static;
-    margin-top: 450px;
+    margin-top: 190%;
     width: 200px;
     height: 200px;
   }
@@ -366,24 +373,30 @@
     width: 20px;
   }
 
-  .stars1 {
-    left: 230px;
-    top: 570px;
-    animation: fadeInDownBig 3s;
-    rotate: -30deg;
-    visibility: visible;
+  .shine {
+    left: 0px;
+    top: 700px;
+  }
+
+  .blue {
+    left: 270px;
+    top: 20px;
   }
   
-  .stars1 img {
-    width: 80px;
-    rotate: -43deg;
+  .blue img {
+    width: 30px;
+  }
+
+  .yelloworange {
+    left: 240px;
+    top: 500px;
   }
 }
 
 @media screen and (max-width: 1150px) {
   .getStarted {
     top: 750px;
-    right: 100px;
+    right: 70px;
   }
 
   .discription {
@@ -399,7 +412,7 @@
 @media screen and (max-width: 1460px) {
   .getStarted {
     top: 750px;
-    right: 200px;
+    right: 100px;
   }
 
   .discription {
@@ -407,8 +420,8 @@
     left: 160px;
   }
 
-  /* .stars1 {
+  .stars1 {
     visibility: hidden;
-  } */
+  }
 }
 
